--- a/css/style.css
+++ b/css/style.css
@@ -610,216 +610,65 @@ header {
 /*----------------------------------------------------
  10. Protfolio Style
 ------------------------------------------------------*/
-.protfolio {
-	background:#2bb3dd;
-}
-.protfolio .container {
-	padding-top:85px;
-	padding-bottom:90px;
-}
-.protfolio .heading p {
-	padding-bottom:41px;
-}
-.protfolio h4 {
-	font-weight:700;
-}
-.portfolioFilter {
-	display:block;
-	margin:0 auto;
-	text-align: center;
-}
-.portfolioFilter ul {
-	margin:0 auto;
-	text-align:center;
-	display:block;
-	margin-bottom:30px;
-}
-.portfolioFilter ul li {
-	display:inline-block;
-	margin:5px 5px;
-}
-.portfolioFilter ul li a {
-	padding:16px 18px;
-	font-size:13px;
-	line-height:15px;
-	color:#ffffff;
-	text-transform:uppercase;
-	display:block;
-	text-decoration:none;
-	border:solid 1px #95d9ee;
-	transition-duration: 0.2s;
-	-webkit-transition-duration: 0.2s;
-}
-.portfolioFilter ul li a:hover {
-	border:solid 1px #15596e;
-	color:#15596e;
-	transition-duration: 0.2s;
-	-webkit-transition-duration: 0.2s;
-}
-.portfolioFilter ul li a.current {
-	background:#15596e;
-	border:solid 1px #15596e;
-	color:#fff;
-}
-ul.portfolioContainer {
-	display:block;
-	padding:0px;
-	list-style-type:none;
-}
-ul.portfolioContainer li {
-	display:block;
-	min-height:205px;
-	padding:0px;
-	margin:0px;
-	cursor:pointer;
-}
-ul.portfolioContainer li .lightCon {
-	display:block;
-	margin:3px 3px 4px 4px;
-	position:relative;
-	overflow:hidden;
-}
-ul.portfolioContainer li img {
-	width:100%;
-	height:auto;
-	display:block;
-}
-span.hoverBox {
-	visibility:hidden;
-	width:100%;
-	height:100%;
-	position: absolute;
-	left:0px;
-	bottom: 0px;
-	transition-duration: 0.2s;
-	-webkit-transition-duration: 0.2s;
-	background: rgba(0, 0, 0, 0.1);
-}
-ul.portfolioContainer li:hover span.hoverBox {
-	visibility:visible;
-	left:0px;
-	bottom: 0px;
-	background: rgba(0, 0, 0, 0.8);
-	transition-duration: 0.2s;
-	-webkit-transition-duration: 0.2s;
-}
-span.hoverBox a {
-	line-height:42px;
-}
-span.hoverBox .smallIcon {
-	width: 94px;
-	margin: 0px auto;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin-left: -47px;
-	margin-top: -21px;
-}
-span.hoverBox .zoom {
-	visibility:hidden;
-	width:42px;
-	height:42px;
-	background:#ff675f;
-	color:#fff;
-	position: relative;
-	left:-150%;
-	/*top:40%;*/
-	text-align:center;
-	line-height:50px;
-	display: block;
-	float: left;
-	transition-duration: 0.2s;
-	-webkit-transition-duration: 0.2s;
-}
-ul.portfolioContainer li:hover span.hoverBox .zoom {
-	visibility:visible;
-	left:0;
-	transition-duration: 0.2s;
-	-webkit-transition-duration: 0.2s;
-}
-span.hoverBox .linKed {
-	visibility:hidden;
-	width:42px;
-	height:42px;
-	background:#313131;
-	color:#fff;
-	position: relative;
-	right:-150%;
-	/*top:40%;*/
-	text-align:center;
-	line-height:52px;
-	display: block;
-	float: right;
-	transition-duration: 0.2s;
-	-webkit-transition-duration: 0.2s;
-}
-ul.portfolioContainer li:hover span.hoverBox .linKed {
-	visibility:visible;
-	right:0%;
-	transition-duration: 0.2s;
-	-webkit-transition-duration: 0.2s;
-}
-.isotope-item {
-	z-index: 2;
-}
-.isotope-hidden.isotope-item {
-	pointer-events: none;
-	z-index: 1;
-}
-.isotope, .isotope .isotope-item {
-	/* change duration value to whatever you like */
-
-    -webkit-transition-duration: 0.8s;
-	-moz-transition-duration: 0.8s;
-	transition-duration: 0.8s;
-}
-.isotope {
-	-webkit-transition-property: height, width;
-	-moz-transition-property: height, width;
-	transition-property: height, width;
-}
-.isotope .isotope-item {
-	padding:0;
-	-webkit-transition-property: -webkit-transform, opacity;
-	-moz-transition-property: -moz-transform, opacity;
-	transition-property: transform, opacity;
-}
-.abc {
-	position: absolute;
-	width: 782px;
-	height: auto;
-	top: 20%;
-	left: 0;
-	right: 0;
-	z-index: 99999;
-	margin: 0 auto;
-}
-.abc #pbImage {
-	position:static !important;
-}
-#pbCaption {
-	display:block;
-	background:none !important;
-}
-#pbBottom {
-	position: relative !important;
-	left: 26.1% !important;
-	bottom: 0px !important;
-	width: 100% !important;
-	margin-left: -26% !important;
-	padding: 0px !important;
-	height:80px !important;
-	display: block;
-	background-color: rgba(24, 27, 34, 1);
- filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr=#B0000000, EndColorStr=#B0000000);
-}
-#pbCloseBtn {
-	position:absolute !important;
+#projects {
+    padding: 50px 15px;
+    border-bottom: 1px solid #dcd9d9;
+    text-align: center;
 }
 
-.showcaseThumbnail {
-	height: 30vh;
-	width: 30vw;
+#projects h2 {
+    color: #374054;
+    margin-bottom: 50px;
+}
+
+.project {
+    position: relative;
+    max-width: 900px;
+    margin: 0 auto 30px auto;
+    overflow: hidden;
+    background: #fff;
+    border-radius: 4px;
+}
+
+.shadow-large {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.08), 0 3px 6px rgba(0,0,0,0.15);
+}
+
+.project-image {
+    float: left;
+}
+
+.project-info {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 300px;
+    padding: 15px;
+}
+
+.project-image img {
+    width: 300px;
+    height: 300px;
+}
+.project-info h3 {
+    font-size: 1.5em;
+    font-weight: 300;
+    color: #374054;
+    margin: 0 0 15px 0;
+}
+
+.project-info p {
+    color: #74808a;
+    margin: 0 0 15px 0;
+    font-size: 0.9em;
+}
+
+.project a {
+    color: #337ab7;
+    text-decoration: none;
+}
+.background-alt {
+    background: #f2f2f5;
 }
 /*----------------------------------------------------
  11. Get in tuch Style
