Add portfolio works to project

--- a/css/style.css
+++ b/css/style.css
@@ -617,7 +617,7 @@ header {
 }
 
 #projects h2 {
-    color: #374054;
+    color: #ff675f;
     margin-bottom: 50px;
 }
 
@@ -648,7 +648,7 @@ header {
 
 .project-image img {
     width: 300px;
-    height: 300px;
+    height: 250px;
 }
 .project-info h3 {
     font-size: 1.5em;
